Issue #1137920 by jessebeach: Removed the toolbar drawer collapsed logic and styling. Moved the toolbar tray trigger link into the toolbar_home links and renamed toolbar_home to toolbar_actions.

--- a/core/modules/toolbar/css/toolbar.theme-rtl.css
+++ b/core/modules/toolbar/css/toolbar.theme-rtl.css
@@ -1,11 +1,3 @@
-#toolbar .toolbar-bar {
-  padding: 0.3333em 20px 0.3333em 50px; /* LTR */
-}
-#toolbar .toolbar-bar .toggle-drawer {
-  left: 20px;
-  right: auto;
-}
-
 #toolbar .toolbar-bar .menu li + li {
   margin-left: auto;
   margin-right: 1em;
